--- a/V1_12_2/build.gradle
+++ b/V1_12_2/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle'
 
 group = 'me.fullidle.keepfight.KeepFight.Main'
-version = '1.1'
+version = '1.2-SNAPSHOT'
 
 minecraft {
     mappings channel: 'snapshot', version: '20171003-1.12'
