--- a/V1_12_2/src/main/resources/config.yml
+++ b/V1_12_2/src/main/resources/config.yml
@@ -1,4 +1,4 @@
-简约模式: true #如果关闭了，玩家每次使用指令不仅会进行修复卡战斗还会对所有有关对局内的参与者和宝可梦参与者等所有的参与者进行一次更新
+模式: SIMPLE #SIMPLE就是第一个版本最简洁功能,UPDATE该模式就是1.1版本中的更新,INTERFACE强制打开主界面(选技能的)
 Msg:
   KeepFightCmdMsg: '&a对战续命成功,有没有效果得自己试'
   NoPlayer: '&c你不是玩家'
