--- a/V1_16_5/build.gradle
+++ b/V1_16_5/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 }
 
 group = 'me.fullidle.keepfight.KeepFight.Main'
-version = '1.1'
+version = '1.2-SNAPSHOT'
 
 repositories {
     mavenCentral()
