--- a/V1_16_5/build.gradle
+++ b/V1_16_5/build.gradle
@@ -1,39 +1,29 @@
-buildscript {
-    repositories {
-        jcenter()
-        maven { url = "https://files.minecraftforge.net/maven" }
-    }
-    dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:3.+'
-    }
-}
+apply plugin: 'net.minecraftforge.gradle'
 
-group = 'me.fullidle.keepfight.KeepFight.Main'
-version = '1.2-SNAPSHOT'
+group = rootProject.group
+version = rootProject.version
+
+minecraft {
+    mappings channel: 'official', version: '1.16.5'
+}
 
 repositories {
     mavenCentral()
     mavenLocal()
 }
 
-apply plugin: 'net.minecraftforge.gradle'
-
-minecraft {
-    mappings channel: 'official', version: '1.16.5'
-}
-
 dependencies {
-    compileOnly 'org.spigotmc:spigot:1.16.5-R0.1-SNAPSHOT'
-    compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
-    compileOnly(fileTree("libs"))
     minecraft 'net.minecraftforge:forge:1.16.5-36.2.39'
+    compileOnly rootProject.fileTree('libs/FICore-1.0-SNAPSHOT-all.jar')
+    compileOnly fileTree('libs/[9.1.5-Server]Pixelmon-1.16.5-9.1.5-server.jar')
+    compileOnly 'com.fullidle.fullidledev.minecraft:forge:1.16.5-36.2.39'
 }
 
 test {
     useJUnitPlatform()
 }
 
-tasks.withType(JavaCompile){
+tasks.withType(JavaCompile).configureEach {
     options.encoding = "UTF-8"
 }
 
