--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,33 @@
+buildscript {
+    repositories {
+        jcenter()
+        maven { url = "https://files.minecraftforge.net/maven" }
+    }
+    dependencies {
+        classpath 'net.minecraftforge.gradle:ForgeGradle:3.+'
+    }
+}
+
 group = 'me.fullidle.keepfight.KeepFight.Main'
-version = '1.0-SNAPSHOT'
+version = '1.3-SNAPSHOT'
+
+allprojects {
+    apply plugin: 'java'
+    repositories {
+        mavenCentral()
+        mavenLocal()
+        maven {url 'https://raw.github.com/FullIdle/maven-repository/main/'}
+    }
+    dependencies {
+        compileOnly 'org.spigotmc:spigot:1.16.5-R0.1-SNAPSHOT'
+        compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
+        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
+        testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.1'
+        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
+        compileOnly 'org.projectlombok:lombok:1.18.28'
+        annotationProcessor 'org.projectlombok:lombok:1.18.28'
+    }
+}
 
 repositories {
     mavenCentral()
@@ -8,6 +36,6 @@ repositories {
 dependencies {
 }
 
-tasks.withType(JavaCompile){
+tasks.withType(JavaCompile).configureEach {
     options.encoding = "UTF-8"
 }
