--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,10 @@ name: ${rootProject.name}
 main: ${group}
 version: ${version}
 description: 继续战斗
+api-version: 1.16
+depend:
+  - 'FICore'
 commands:
   keepfight:
     description: 指令
+    aliases: [kf,keepf]
