--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 }
 
 group = 'me.fullidle.keepfight.KeepFight.Main'
-version = '1.3-SNAPSHOT'
+version = '1.3.2'
 
 allprojects {
     apply plugin: 'java'
@@ -26,6 +26,7 @@ allprojects {
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
         compileOnly 'org.projectlombok:lombok:1.18.28'
         annotationProcessor 'org.projectlombok:lombok:1.18.28'
+        compileOnly rootProject.fileTree('libs/FICore-1.0-SNAPSHOT-all.jar')
     }
 }
 
@@ -34,30 +35,25 @@ repositories {
 }
 
 dependencies {
-    compileOnly project(path:':common')
+    implementation project(path:':common')
+    compileOnly fileTree(dir: 'V1_12_2/build/libs', include: '**/*.jar')
+    compileOnly fileTree(dir: 'V1_16_5/build/libs', include: '**/*.jar')
 }
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = "UTF-8"
 }
 
-sourceSets {
-    main {
-        java {
-            srcDirs = [
-                    'src/main/java',
-                    'V1_12_2/src/main/java',
-                    'V1_16_5/src/main/java',
-                    'common/src/main/java'
-            ]
-        }
-        resources {
-            srcDirs = [
-                    'src/main/resources',
-                    'V1_12_2/src/main/resources',
-                    'V1_12_2/src/main/resources',
-                    'common/src/main/resources'
-            ]
-        }
-    }
+processResources {
+    setFilteringCharset("UTF-8")
+    expand project.properties
+}
+
+jar{
+    from("V1_12_2/build/resources/").include("**/*.*")
+    from("V1_12_2/build/classes/java/main").include("**/*.*")
+    from("V1_16_5/build/resources/").include("**/*.*")
+    from("V1_16_5/build/classes/java/main").include("**/*.*")
+    from("common/build/resources/").include("**/*.*")
+    from("common/build/classes/java/main").include("**/*.*")
 }
