--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,5 +1,5 @@
-group = 'me.fullidle.keepfight.KeepFight.Main'
-version = '1.3-SNAPSHOT'
+group = rootProject.group
+version = rootProject.version
 
 repositories {
     mavenCentral()
@@ -10,4 +10,13 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = "UTF-8"
+}
+
+processResources {
+    setFilteringCharset("UTF-8")
+    expand project.properties
 }
