上版本第三次的修正

--- a/V1_12_2/build.gradle
+++ b/V1_12_2/build.gradle
@@ -9,12 +9,14 @@ minecraft {
 
 repositories {
     mavenCentral()
+    mavenLocal()
+    maven {url 'https://raw.github.com/FullIdle/maven-repository/main/'}
 }
 
 dependencies {
     minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2860'
     compileOnly rootProject.fileTree('libs/FICore-1.0-SNAPSHOT-all.jar')
-    compileOnly fileTree('libs/Pixelmon1.12.2Server.jar')
+    compileOnly 'com.pixelmonmod.pixelmon:Pixelmon:1.12.2-8.4.3'
     implementation project(path:':common')
 }
 
