--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins{
 }
 
 group = 'me.fullidle.keepfight.KeepFight.Main'
-version = '1.3.4'
+version = '1.3.5-SNAPSHOT'
 
 allprojects {
     apply plugin:'java'
