--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins{
 }
 
 group = 'me.fullidle.keepfight.KeepFight.Main'
-version = '1.3.5-SNAPSHOT'
+version = '1.3.6-SNAPSHOT'
 
 allprojects {
     apply plugin:'java'
@@ -35,7 +35,7 @@ dependencies {
     implementation project(path:':common')
     implementation project(path:':V1_12_2')
     implementation project(path:':V1_16_5')
-
+    implementation project(path:':V1_20_2')
 }
 
 tasks.withType(JavaCompile).configureEach {
