--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-plugins{
+plugins {
     id 'com.github.johnrengelman.shadow' version '8.1.1'
     id 'java'
 }
@@ -7,14 +7,20 @@ group = 'me.fullidle.keepfight.KeepFight.Main'
 version = '1.3.6-SNAPSHOT'
 
 allprojects {
-    apply plugin:'java'
+    apply plugin: 'java'
+
+    java {
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
+
     repositories {
         mavenCentral()
         mavenLocal()
-        maven {url 'https://raw.github.com/FullIdle/maven-repository/main/'}
+        maven { url 'https://raw.github.com/FullIdle/maven-repository/main/' }
     }
     dependencies {
-        compileOnly 'me.fullidle.ficore:FICore:1.2.2'
+        compileOnly 'me.fullidle.ficore:FICore:1.2.6'
         compileOnly 'org.spigotmc:spigot:1.16.5-R0.1-SNAPSHOT'
         compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
@@ -28,14 +34,14 @@ allprojects {
 repositories {
     mavenCentral()
     mavenLocal()
-    maven {url 'https://raw.github.com/FullIdle/maven-repository/main/'}
+    maven { url 'https://raw.github.com/FullIdle/maven-repository/main/' }
 }
 
 dependencies {
-    implementation project(path:':common')
-    implementation project(path:':V1_12_2')
-    implementation project(path:':V1_16_5')
-    implementation project(path:':V1_20_2')
+    implementation project(path: ':common')
+    implementation project(path: ':V1_12_2')
+    implementation project(path: ':V1_16_5')
+    implementation project(path: ':V1_20_2')
 }
 
 tasks.withType(JavaCompile).configureEach {
@@ -47,11 +53,11 @@ processResources {
     expand project.properties
 }
 
-shadowJar{
+shadowJar {
     mergeServiceFiles()
     archiveBaseName.set(this.rootProject.name)
     archiveVersion.set(this.version as String)
-    manifest{
-        attributes 'Main-Class':this.group
+    manifest {
+        attributes 'Main-Class': this.group
     }
 }
