--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-    id 'com.github.johnrengelman.shadow' version '8.1.1'
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 group = 'me.fullidle.keepfight.KeepFight.Main'
@@ -44,7 +44,11 @@ dependencies {
     implementation project(path: ':V1_20_2')
 }
 
-tasks.withType(JavaCompile).configureEach {
+test {
+    useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
 }
 
@@ -56,7 +60,7 @@ processResources {
 shadowJar {
     mergeServiceFiles()
     archiveBaseName.set(this.rootProject.name)
-    archiveVersion.set(this.version as String)
+    archiveVersion.set(this.version)
     manifest {
         attributes 'Main-Class': this.group
     }
