--- a/V1_16_5/build.gradle
+++ b/V1_16_5/build.gradle
@@ -4,6 +4,10 @@ version = rootProject.version
 repositories {
     mavenCentral()
     mavenLocal()
+    maven {
+        allowInsecureProtocol = true
+        url "http://server.pokemtd.top:31647/snapshots"
+    }
 }
 
 dependencies {
