代码变动较大，理想效果与原来一样 修复提示问题 增加kfreload命令(非op不可用)

--- a/V1_20_2/build.gradle
+++ b/V1_20_2/build.gradle
@@ -5,6 +5,10 @@ repositories {
     mavenCentral()
     mavenLocal()
     maven { url "https://maven.mohistmc.com/" }
+    maven {
+        allowInsecureProtocol = true
+        url "http://server.pokemtd.top:31647/snapshots"
+    }
 }
 
 dependencies {
