--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'me.fullidle.keepfight.KeepFight.Main'
-version = '1.3.9-SNAPSHOT'
+version = '1.4.0'
 
 allprojects {
     apply plugin: 'java'
